2015-09-30  Thomas Schwinge  <thomas@codesourcery.com>
	    Ilya Verbin  <ilya.verbin@intel.com>
	    Andrey Turetskiy  <andrey.turetskiy@intel.com>

	* config/i386/intelmic-mkoffload.c (generate_host_descr_file)
	(prepare_target_image, main): Refactor argv building to use
	obstacks.

2015-09-30  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* config/spu/spu-protos.h (spu_expand_atomic_op): Add prototype.
	* config/spu/spu.c (spu_expand_atomic_op): New function.
	* config/spu/spu.md (AINT): New mode iterator.
	(ATOMIC): New code iterator.
	(atomic_name, atomic_pred): New code predicates.
	("atomic_load<mode>", "atomic_store<mode>"): New expanders.
	("atomic_compare_and_swap<mode>", "atomic_exchange<mode>"): Likewise.
	(""atomic_<atomic_name><mode>", "atomic_fetch_<atomic_name><mode>",
	"atomic_<atomic_name>_fetch<mode>"): Likewise.

2015-09-30  Ilya Enkovich  <enkovich.gnu@gmail.com>

	* config/i386/i386.c (scalar_chain::analyze_register_chain): Ignore
	debug insns.
	(scalar_chain::convert_reg): Likewise.

2015-09-30  Richard Biener  <rguenther@suse.de>

	* builtins.c: Add comment that no new simplifications shouldd
	be added here.

2015-09-30  Marek Polacek  <polacek@redhat.com>

	PR tree-optimization/67690
	* tree-ssa-ifcombine.c (pass_tree_ifcombine::execute): Call
	reset_flow_sensitive_info_in_bb.
	* tree-ssa-tail-merge.c (replace_block_by): Likewise.
	* tree-ssanames.c: Include "gimple-iterator.h".
	(reset_flow_sensitive_info_in_bb): New function.
	* tree-ssanames.h (reset_flow_sensitive_info_in_bb): Declare.

2015-09-30  Thomas Schwinge  <thomas@codesourcery.com>

	* config/i386/intelmic-mkoffload.c (target_ilp32): Remove
	variable, replacing it with...
	(offload_abi): ... this new variable.  Adjust all users.
	* config/nvptx/mkoffload.c (target_ilp32, offload_abi): Likewise.

2015-09-30  Matthias Klose  <doko@ubuntu.com>

	* configure.ac: Remove extraneous ;;.
	* configure: Regenerate.

2015-09-29  James Bowman  <james.bowman@ftdichip.com>
